Table: fix sorting icon spacing

--- a/coral-component-table/src/styles/index.styl
+++ b/coral-component-table/src/styles/index.styl
@@ -360,8 +360,8 @@ table[is="coral-table"] {
       position: absolute;
       height: 10px;
       width: 10px;
-      padding-left: 10px;
-      margin-left: 10px;
+      padding-left: 8px;
+      margin-left: 8px;
       margin-top: 1px;
       z-index: -1;
       transition: transform 125ms ease-in-out;
